dropkick overflow fix. profile page avatar styling
--HG--
branch : socialitems

--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -3735,6 +3735,7 @@ div.hasHalfs{
     position: absolute;
     right: 0;
     width: 100%;
+    overflow-y: scroll !important;
     a, a:link, a:visited{
         display: block;
     }
